--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "static-site",
+  "name": "Professional-README-Generator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "David Wright",
   "license": "ISC",
   "dependencies": {
     "inquirer": "8.2.4"
